Add repo info to _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,10 @@
 
 title: Портфолио
 
+repository: asylgazieva/asylgazieva.github.io 
+
 # Build settings
 theme: minima
-plugins:
 
 
 # Exclude from processing.
