--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,8 @@ host: 0.0.0.0
 
 header_pages:
   - index.markdown
+  - info.md
+  - goal.md
+  - plan.md
   - lessons.md
-  - diplomas.md
   - certificates.md
